--- a/fastapi_template_project/templates/index.html
+++ b/fastapi_template_project/templates/index.html
@@ -7,7 +7,7 @@
     <h1>User List</h1>
     <ul>
         {% for user in users %}
-            <li>{{ user.username }} - {{ user.email }}</li>
+            <li>{{user.id}}) {{ user.username }} - {{ user.email }}</li>
         {% endfor %}
     </ul>
 </body>
